# digital-humanities

./: .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml
src/digital-humanities/: main.py
src/medicus-politicus/: main.py
src/medicus_politicus/: functions.py  helpers.py  main.py
tests/: integration_test.py  unit_test.py
tests/file_fixtures/: integration_substitutions.csv  substitutions.csv
