[tool.poetry]
name = "digital-humanities"
version = "0.0.1"
description = "Let's automate something while dealing with Latin books!"
authors = ["robin-castellani <robin.castellani@alumni.unitn.it>"]
license = "CC BY-NC-SA 4.0"
packages = [
    {include = "medicus-politicus", from = 'src'}
]

[tool.poetry.scripts]
medicus-politicus = "medicus-politicus.main:cli"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
